[package]
name = "nu_plugin_unreal_engine"
version = "0.1.0"
authors = ["Jérôme Lécuyer"]
edition = "2024"
description = "a nushell plugin called unreal_engine"
repository = "https://github.com/Jiogo18/nu_plugin_unreal_engine"
license = "MIT"

[dependencies]
nu-plugin = "0.103.0"
nu-protocol = "0.103.0"
uasset = { version = "^0.5", git = "https://github.com/thibaultleouay/uasset-rs" }

[dev-dependencies]
nu-plugin-test-support = { version = "0.103.0" }
